--- a/CodeAlpha_Project_Music_player-main/index.html
+++ b/CodeAlpha_Project_Music_player-main/index.html
@@ -19,7 +19,7 @@
       <div class="wrapper">
         <div class="details">
           <div class="now-playing">PLAYING x OF y by</div>
-          <div class="now-playing p-2">BHARATH V</div>
+          <div class="now-playing p-2">Shashank_SM</div>
           <div class="track-art"></div>
           <div class="track-name">Track Name</div>
           <div class="track-artist">Track Artist</div>
